--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     :root{
       --bg:#0b1220;--panel:#0f172a;--text:#e5e7eb;--muted:#94a3b8;
       --up:#10b981;--down:#ef4444;--line:#1e293b;--accent:#2563eb;
-      --warn:#f59e0b;--chip:#1f2937;--ok:#22c55e;
+      --warn:#f59e0b;--chip:#1f2937;--ok:#22c55e;--bad:#ef4444;
       --shadow: rgba(0,0,0,.35);
     }
     *{box-sizing:border-box}
@@ -30,6 +30,7 @@
     .chip.warn{color:#fde68a;border-color:#7c2d12;background:#3b1d0b}
     .chip.danger{color:#fecaca;border-color:#7f1d1d;background:#2f1313}
     .btn{padding:9px 12px;border-radius:10px;border:1px solid var(--line);background:#0b1b33;color:#dbeafe;cursor:pointer}
+    .btn.sec{background:#111827;color:#cbd5e1}
     table{width:100%;border-collapse:collapse}
     th,td{padding:10px;border-bottom:1px dashed var(--line);font-size:14px}
     th{color:#93c5fd;text-align:left}
@@ -37,22 +38,34 @@
     .up{color:var(--up)} .down{color:var(--down)}
     .mono{font-variant-numeric:tabular-nums}
     .right{text-align:right}
-    .center{text-align:center}
-    .kbd{font-family:ui-monospace,SFMono-Regular,Menlo,monospace;background:#0b1b33;border:1px solid var(--line);padding:0 6px;border-radius:6px}
-    small.muted{color:var(--muted)}
+    .muted{color:var(--muted)}
     .section-title{display:flex;align-items:center;gap:8px;margin-bottom:6px}
     .section-title .dot{width:8px;height:8px;border-radius:50%;background:#38bdf8;display:inline-block}
     .footer{color:#9ca3af;font-size:12px;margin-top:10px}
+    .status{display:flex;gap:10px;flex-wrap:wrap}
+    .badge{font-size:12px;padding:5px 8px;border-radius:8px;border:1px solid var(--line);background:#0b1b33}
+    .badge.err{color:#fecaca;border-color:#7f1d1d;background:#2f1313}
   </style>
 </head>
 <body>
   <div class="wrap">
     <h1>사토시의지갑</h1>
-    <div class="sub">⚡ 업비트·빗썸 실시간 시세 기반 · 매수·매도 타점 분석 전용 (거래 없음)</div>
+    <div class="sub">⚡ 업비트·빗썸 시세 기반 · 매수·매도 타점 분석 전용 (거래 없음) · 데이터는 브라우저에 저장됩니다</div>
 
-    <!-- ✅ 검색 / 자동완성 -->
+    <!-- 상태/컨트롤 -->
     <div class="panel">
-      <div class="section-title"><span class="dot"></span><b>검색 (한글/영문/심볼) — 자동완성</b></div>
+      <div class="section-title"><span class="dot"></span><b>상태</b></div>
+      <div class="status">
+        <span id="sts-api" class="badge">API: -</span>
+        <span id="sts-updated" class="badge">업데이트: -</span>
+        <button id="btn-refresh" class="btn">🔄 새로고침</button>
+        <button id="btn-auto" class="btn sec">▶ 자동갱신 켜기(30초)</button>
+      </div>
+    </div>
+
+    <!-- 검색 -->
+    <div class="panel">
+      <div class="section-title"><span class="dot"></span><b>검색 (한글/영문/심볼) — 자동완성 5개</b></div>
       <div class="searchbar">
         <input id="searchInput" placeholder="예: 비트코인, 이더리움, BTC, ETH …" autocomplete="off"/>
         <button id="btnSearch">검색</button>
@@ -61,7 +74,7 @@
       <div id="signalChips" style="margin-top:10px" class="hint"></div>
     </div>
 
-    <!-- ✅ 매크로 지표 -->
+    <!-- 매크로 -->
     <div class="panel">
       <div class="section-title"><span class="dot"></span><b>거시경제 지표 (자동 저장)</b></div>
       <div class="row cols-3">
@@ -78,121 +91,280 @@
         <span id="macroRiskChip" class="chip">매크로 위험도: -</span>
         <button id="saveMacro" class="btn">지표 저장</button>
       </div>
+      <small class="muted">※ 자동 추출은 CORS/차단 이슈가 있어 수동 입력 설계. 값은 브라우저(localStorage)에 저장됩니다.</small>
     </div>
 
-    <!-- ✅ 상승 TOP -->
+    <!-- 상승 TOP -->
     <div class="panel">
-      <div class="section-title"><span class="dot"></span><b>상승 TOP (업비트 + 빗썸)</b> <small id="refreshNote" class="muted">갱신 중…</small></div>
+      <div class="section-title"><span class="dot"></span><b>상승 TOP (업비트 · 빗썸 · 통합)</b> <small id="refreshNote" class="muted" style="margin-left:8px">갱신 중…</small></div>
       <div class="row cols-2">
-        <div><b>업비트</b><table id="upbitTop"><thead><tr><th>코인</th><th>심볼</th><th class="right">24h</th></tr></thead><tbody></tbody></table></div>
-        <div><b>빗썸</b><table id="bithumbTop"><thead><tr><th>코인</th><th>심볼</th><th class="right">24h</th></tr></thead><tbody></tbody></table></div>
+        <div>
+          <b>업비트</b>
+          <table id="upbitTop"><thead><tr><th>코인(한글)</th><th>심볼</th><th class="right">24h</th><th class="right">거래대금(24h)</th></tr></thead><tbody></tbody></table>
+        </div>
+        <div>
+          <b>빗썸</b>
+          <table id="bithumbTop"><thead><tr><th>코인(한글)</th><th>심볼</th><th class="right">24h</th><th class="right">거래대금(24h)</th></tr></thead><tbody></tbody></table>
+        </div>
+      </div>
+      <div style="margin-top:12px">
+        <b>통합</b>
+        <table id="mergedTop"><thead><tr><th>거래소</th><th>코인(한글)</th><th>심볼</th><th class="right">24h</th><th class="right">거래대금(24h)</th></tr></thead><tbody></tbody></table>
+        <small class="muted">10초마다 자동 갱신</small>
       </div>
     </div>
 
-    <!-- ✅ 타점 저장 -->
+    <!-- 타점 저장 -->
     <div class="panel">
-      <div class="section-title"><span class="dot"></span><b>내 타점 저장</b></div>
+      <div class="section-title"><span class="dot"></span><b>내가 저장한 타점 (원화)</b></div>
       <div class="row cols-3">
-        <input id="m_coin" placeholder="코인명">
+        <input id="m_coin" placeholder="코인 이름(한글)">
         <input id="m_symbol" placeholder="심볼 (예: BTC)">
-        <input id="m_buy" placeholder="매수가">
+        <input id="m_price" placeholder="현재가 (선택)" class="mono">
       </div>
       <div class="row cols-3" style="margin-top:8px">
-        <input id="m_sell1" placeholder="매도 1차">
-        <input id="m_sell2" placeholder="매도 2차">
-        <button id="saveMark" class="btn">저장</button>
+        <input id="m_buy" placeholder="매수 (₩)" class="mono">
+        <input id="m_sell1" placeholder="매도 1차 (₩)" class="mono">
+        <input id="m_sell2" placeholder="매도 2차 (₩)" class="mono">
       </div>
-      <table style="margin-top:12px" id="markTable"><thead><tr><th>코인</th><th>심볼</th><th class="right">매수</th><th class="right">매도1</th><th class="right">매도2</th></tr></thead><tbody></tbody></table>
+      <div style="display:flex;gap:8px;margin-top:10px">
+        <button id="saveMark" class="btn">저장</button>
+        <button id="clearMark" class="btn sec">전체 삭제</button>
+      </div>
+      <table style="margin-top:12px" id="markTable"><thead><tr><th>코인(한글)</th><th>심볼</th><th class="right">현재가</th><th class="right">매수</th><th class="right">매도 1차</th><th class="right">매도 2차</th></tr></thead><tbody></tbody></table>
+      <small class="muted">저장된 타점이 없습니다.</small>
     </div>
 
-    <div class="footer">ⓒ 2025 사토시의지갑 · 투자 권유 목적이 아닙니다.</div>
+    <div class="footer">본 서비스는 투자 권유/중개/집행이 아니며, 정보 제공 및 교육 목적입니다. 거래/손실 책임은 이용자에게 있습니다.</div>
   </div>
 
 <script>
-// ✅ 기존 기능 + 새로운 기능 + 오류수정 완전 통합 버전
+/* ===================== 공통 유틸 ===================== */
+const $ = (id) => document.getElementById(id);
+const fmt = (n) => (n===null||n===undefined||isNaN(n)) ? '-' : Number(n).toLocaleString('ko-KR');
+const pfmt = (n) => isNaN(n) ? '-' : ((n>0?'+':'') + n.toFixed(2) + '%');
+const save = (k,v)=> localStorage.setItem(k,JSON.stringify(v));
+const load = (k,d)=> { try{ let v=JSON.parse(localStorage.getItem(k)); return v??d; } catch{ return d; } };
+const toNum = (x)=>{ const n = parseFloat(String(x||'').replace(/[^0-9.\-]/g,'')); return isNaN(n)?null:n; };
 
-const fmt = n => (isNaN(n)?'-':n.toLocaleString('ko-KR'));
-const pfmt = n => (isNaN(n)?'-':(n>0?'+':'')+n.toFixed(2)+'%');
-const save = (k,v)=>localStorage.setItem(k,JSON.stringify(v));
-const load = (k,d)=>{try{return JSON.parse(localStorage.getItem(k))??d}catch{return d}};
-
-// 🔹 업비트 마켓 로드
-let upbitMarkets=[];
-async function loadMarkets(){
-  const r=await fetch('https://api.upbit.com/v1/market/all?isDetails=false');
-  const j=await r.json();
-  upbitMarkets=j.filter(m=>m.market.startsWith('KRW-'));
+/* ===================== 상태/컨트롤 ===================== */
+const stsApi = $('sts-api');
+const stsUpdated = $('sts-updated');
+const btnRefresh = $('btn-refresh');
+const btnAuto = $('btn-auto');
+let timer = null;
+function setStatus(ok,msg){
+  stsApi.textContent = 'API: ' + msg;
+  stsApi.className = 'badge' + (ok?'':' err');
 }
-loadMarkets();
+function setUpdated(){
+  const now = new Date();
+  stsUpdated.textContent = '업데이트: ' + now.toLocaleString('ko-KR');
+}
 
-// 🔹 검색
-const input=document.getElementById('searchInput'),chips=document.getElementById('searchChips'),sigchips=document.getElementById('signalChips');
-input.addEventListener('input',()=>{
-  const q=input.value.toLowerCase();
-  const list=upbitMarkets.filter(m=>m.korean_name.toLowerCase().includes(q)||m.market.toLowerCase().includes(q)).slice(0,5);
-  chips.innerHTML='';
-  list.forEach(x=>{
-    const el=document.createElement('span');
-    el.className='chip';
-    el.textContent=x.korean_name+' ('+x.market.replace('KRW-','')+')';
-    el.onclick=()=>analyze(x.market);
+/* ===================== 업비트 마켓 & 검색 ===================== */
+let upbitMarkets = [];
+async function loadMarkets(){
+  try{
+    const r = await fetch('https://api.upbit.com/v1/market/all?isDetails=false');
+    const j = await r.json();
+    upbitMarkets = j.filter(m=>m.market.startsWith('KRW-'));
+  }catch(e){ /* 무시 */ }
+}
+const searchInput = $('searchInput');
+const chips = $('searchChips');
+const sigchips = $('signalChips');
+function makeChip(text, tone){
+  const el = document.createElement('span');
+  el.className = 'chip ' + (tone||'');
+  el.textContent = text;
+  sigchips.appendChild(el);
+}
+function setChips(items){
+  chips.innerHTML = '';
+  items.slice(0,5).forEach(x=>{
+    const el = document.createElement('span');
+    el.className = 'chip';
+    el.textContent = x.korean_name + ' ('+ x.market.replace('KRW-','') +')';
+    el.onclick = ()=> analyze(x.market);
     chips.appendChild(el);
   });
+}
+searchInput.addEventListener('input', e=>{
+  const q = e.target.value.trim().toLowerCase();
+  if(q.length<1){ chips.innerHTML=''; return; }
+  const items = upbitMarkets.filter(m=> m.korean_name.toLowerCase().includes(q) ||
+    m.english_name?.toLowerCase().includes(q) || m.market.toLowerCase().includes(q));
+  setChips(items);
 });
-document.getElementById('btnSearch').onclick=()=>{const q=input.value.trim().toUpperCase();const m=upbitMarkets.find(x=>x.market.endsWith('-'+q)||x.korean_name===q);if(m)analyze(m.market);else alert('코인을 찾을 수 없습니다.')};
+$('btnSearch').addEventListener('click', ()=>{
+  const q = searchInput.value.trim().toUpperCase();
+  const m = upbitMarkets.find(x=>x.market===q || x.market.endsWith('-'+q) || x.korean_name===q);
+  if(!m){ alert('업비트 KRW 마켓에서 찾지 못했습니다.'); return; }
+  analyze(m.market);
+});
 
-// 🔹 분석 기능
+/* ===================== 분석(타점/위험도) ===================== */
 async function analyze(market){
-  sigchips.innerHTML='<span class="muted">분석 중…</span>';
+  sigchips.textContent = '불러오는 중…';
   try{
-    const r=await fetch('https://api.upbit.com/v1/ticker?markets='+market);
-    const j=await r.json(); const t=j[0];
-    const price=t.trade_price; const chg=t.signed_change_rate*100;
-    const retr382=price*(1-0.382); const retr618=price*(1-0.618);
-    sigchips.innerHTML='';
-    makeChip(`매수 타점: ₩${fmt(retr618*0.98)}`, 'ok');
-    makeChip(`매도 타점: 1차 ₩${fmt(price*1.05)} / 2차 ₩${fmt(price*1.10)}`, chg>7?'warn':'ok');
-    makeChip(`위험도: ${chg>10?'높음':chg>5?'보통':'낮음'}`, chg>10?'danger':chg>5?'warn':'ok');
-  }catch(e){sigchips.innerHTML='<span class="muted">불러오기 실패</span>';}
+    const r = await fetch('https://api.upbit.com/v1/ticker?markets='+market);
+    if(!r.ok) throw new Error('HTTP '+r.status);
+    const [t] = await r.json();
+    const price = t.trade_price;
+    const chg = t.signed_change_rate*100;
+    const vol = Math.abs(chg);
+    const retr382 = price*(1-0.382);
+    const retr618 = price*(1-0.618);
+    sigchips.innerHTML = '';
+    // (순서 수정: tone, text 헷갈리지 않게 정확히)
+    makeChip('분석 매수타점: ₩'+fmt(Math.max(retr618, retr382)*0.98), 'ok');
+    makeChip('분석 매도타점: 1차 ₩'+fmt(price*1.05)+' · 2차 ₩'+fmt(price*1.10), (vol>7?'warn':'ok'));
+    makeChip('위험도: '+ (vol>10?'높음':vol>5?'보통':'낮음'), vol>10?'danger':vol>5?'warn':'ok');
+    makeChip('되돌림 38.2%: ₩'+fmt(retr382)+' · 61.8%: ₩'+fmt(retr618));
+    setStatus(true,'정상');
+  }catch(e){
+    sigchips.textContent='분석 실패(네트워크/CORS).';
+    setStatus(false,'오류');
+  }
 }
-function makeChip(tone,text){const e=document.createElement('span');e.className='chip '+tone;e.textContent=text;sigchips.appendChild(e);}
 
-// 🔹 매크로 저장
-document.getElementById('saveMacro').onclick=()=>{
-  const vals={dxy:dxy.value,vix:vix.value,ust10y:ust10y.value,wti:wti.value,nasdaq:nasdaq.value,btcd:btcd.value};
-  save('macro',vals); scoreMacro(vals);
+/* ===================== 매크로(저장/점수) ===================== */
+const macroIds = ['dxy','vix','ust10y','wti','nasdaq','btcd'];
+$('saveMacro').onclick = ()=>{
+  const vals = {};
+  macroIds.forEach(id=> vals[id]=($(id).value||'').trim());
+  save('macro', vals);
+  scoreMacro(vals, true);
 };
-function scoreMacro(v){let s=0;
-  const toN=x=>parseFloat(x)||0;
-  s+=(toN(v.dxy)<103?2:1); s+=(toN(v.vix)<20?2:1); s+=(toN(v.ust10y)<4.5?2:1);
-  const label=s>=5?'낮음':s>=3?'보통':'높음';
-  const rc=document.getElementById('macroRiskChip'); rc.textContent='매크로 위험도: '+label;
-  rc.className='chip '+(label==='높음'?'danger':label==='보통'?'warn':'ok');
+(function initMacro(){
+  const vals = load('macro',{});
+  macroIds.forEach(id=>{ const v = vals[id]; if(v!==undefined) $(id).value=v; });
+  scoreMacro(vals,false);
+})();
+function scoreMacro(vals,blink){
+  const dxy=toNum(vals.dxy), vix=toNum(vals.vix), y=toNum(vals.ust10y), w=toNum(vals.wti), nq=toNum(vals.nasdaq), bd=toNum(vals.btcd);
+  let s=0;
+  if(dxy!==null) s += (dxy<103?2:dxy<106?1:0);
+  if(vix!==null) s += (vix<14?2:vix<20?1:0);
+  if(y!==null)   s += (y<4?2:y<5?1:0);
+  if(nq!==null)  s += (nq>0?2:nq>-1?1:0);
+  if(bd!==null)  s += (bd>50?1:2); // 도미넌스 높으면 알트 위험 ↑
+  const label = s>=8?'낮음':s>=5?'보통':'높음';
+  const rc = $('macroRiskChip');
+  rc.textContent = '매크로 위험도: '+label;
+  rc.className = 'chip ' + (label==='높음'?'danger':label==='보통'?'warn':'ok');
+  if(blink){ rc.style.boxShadow='0 0 0 2px #38bdf8 inset'; setTimeout(()=>rc.style.boxShadow='none',700); }
 }
-scoreMacro(load('macro',{}));
 
-// 🔹 상승 TOP 자동 갱신
-async function refreshTop(){
+/* ===================== 상승 TOP(업비트/빗썸) ===================== */
+function clsPct(p){ const cls = p>=0?'up':'down'; return `<span class="${cls}">${pfmt(p)}</span>` }
+function right(v){ return `<span class="right mono">${v}</span>` }
+function renderTable(id, rows){
+  const tb = document.querySelector('#'+id+' tbody');
+  tb.innerHTML = rows.map(r=>`<tr>${r.map(c=>`<td>${c}</td>`).join('')}</tr>`).join('');
+}
+function renderEmpty(id,msg){
+  document.querySelector('#'+id+' tbody').innerHTML = `<tr><td colspan="4" class="muted">${msg}</td></tr>`;
+}
+
+async function fetchUpbitTop(){
   try{
-    const up=await fetch('https://api.upbit.com/v1/ticker?markets=KRW-BTC,KRW-ETH');
-    const j=await up.json();
-    const t=document.querySelector('#upbitTop tbody');
-    t.innerHTML=j.map(x=>`<tr><td>${x.market.replace('KRW-','')}</td><td>${x.market}</td><td class="right ${x.signed_change_rate>=0?'up':'down'}">${pfmt(x.signed_change_rate*100)}</td></tr>`).join('');
-  }catch(e){}
+    const rAll = await fetch('https://api.upbit.com/v1/market/all?isDetails=true');
+    const mk = await rAll.json();
+    const krw = mk.filter(x=>x.market.startsWith('KRW-')).slice(0,120).map(x=>x.market).join(',');
+    const r = await fetch('https://api.upbit.com/v1/ticker?markets='+krw);
+    const t = await r.json();
+    const rows = t.map(x=>({name:x.market.replace('KRW-',''), chg:x.signed_change_rate*100, vol:x.acc_trade_price_24h, sym:x.market}))
+      .sort((a,b)=>b.chg-a.chg).slice(0,15);
+    renderTable('upbitTop', rows.map(v=>[v.name, v.sym.replace('KRW-',''), clsPct(v.chg), right(fmt(Math.round(v.vol/1e8))+' 억')]));
+    return rows.map(v=>({ex:'업비트', ...v}));
+  }catch(e){
+    renderEmpty('upbitTop','업비트 요청 실패(CORS 허용 필요).');
+    return [];
+  }
 }
-setInterval(refreshTop,10000); refreshTop();
+async function fetchBithumbTop(){
+  try{
+    const r = await fetch('https://api.bithumb.com/public/ticker/ALL_KRW');
+    const j = await r.json();
+    if(j.status!=='0000') throw 0;
+    const list = Object.entries(j.data)
+      .filter(([k,v])=>k!=='date' && v && v.fluctate_rate_24H)
+      .map(([k,v])=>({name:k, chg:parseFloat(v.fluctate_rate_24H), vol:parseFloat(v.acc_trade_value_24H||0)}))
+      .sort((a,b)=>b.chg-a.chg).slice(0,15);
+    renderTable('bithumbTop', list.map(v=>[v.name, v.name, clsPct(v.chg), right(fmt(Math.round(v.vol/1e8))+' 억')]));
+    return list.map(v=>({ex:'빗썸', sym:v.name, name:v.name, chg:v.chg, vol:v.vol}));
+  }catch(e){
+    renderEmpty('bithumbTop','빗썸 요청 실패(일부 브라우저 CORS 차단).');
+    return [];
+  }
+}
+async function refreshAll(){
+  $('refreshNote').textContent='갱신 중…';
+  const u = await fetchUpbitTop();
+  const b = await fetchBithumbTop();
+  const merged = [...u,...b].sort((a,b)=>b.chg-a.chg).slice(0,20);
+  renderTable('mergedTop', merged.map(v=>[v.ex, v.name, (v.sym||v.name), clsPct(v.chg), right(fmt(Math.round((v.vol||0)/1e8))+' 억')]));
+  $('refreshNote').textContent='10초마다 자동 갱신';
+  setUpdated();
+}
 
-// 🔹 타점 저장
+/* ===================== 타점 저장 ===================== */
 function renderMarks(){
-  const t=document.querySelector('#markTable tbody');
-  const data=load('marks',[]);
-  t.innerHTML=data.map(d=>`<tr><td>${d.coin}</td><td>${d.sym}</td><td class="right">${fmt(d.buy)}</td><td class="right">${fmt(d.sell1)}</td><td class="right">${fmt(d.sell2)}</td></tr>`).join('')||`<tr><td colspan="5" class="muted">저장된 타점 없음</td></tr>`;
+  const t = document.querySelector('#markTable tbody');
+  const data = load('marks',[]);
+  if(!data.length){ t.innerHTML = `<tr><td colspan="6" class="muted">저장된 타점이 없습니다.</td></tr>`; return; }
+  t.innerHTML = data.map(d=>`<tr>
+    <td>${d.coin}</td><td>${d.sym}</td>
+    <td class="right mono">${fmt(d.price)}</td>
+    <td class="right mono">${fmt(d.buy)}</td>
+    <td class="right mono">${fmt(d.sell1)}</td>
+    <td class="right mono">${fmt(d.sell2)}</td>
+  </tr>`).join('');
 }
-document.getElementById('saveMark').onclick=()=>{
-  const row={coin:m_coin.value,sym:m_symbol.value,buy:m_buy.value,sell1:m_sell1.value,sell2:m_sell2.value};
-  const d=load('marks',[]); d.unshift(row); save('marks',d); renderMarks();
+$('saveMark').onclick = ()=>{
+  const coin = m_coin.value.trim(), sym=m_symbol.value.trim();
+  if(!coin || !sym){ alert('코인(한글)과 심볼을 입력하세요.'); return; }
+  const row = {
+    coin, sym,
+    price: toNum(m_price.value), buy: toNum(m_buy.value),
+    sell1: toNum(m_sell1.value), sell2: toNum(m_sell2.value)
+  };
+  const data = load('marks',[]);
+  const idx = data.findIndex(x=>x.sym.toUpperCase()===row.sym.toUpperCase());
+  if(idx>=0) data[idx]=row; else data.unshift(row);
+  save('marks',data);
+  renderMarks();
 };
-renderMarks();
+$('clearMark').onclick = ()=>{
+  if(confirm('저장된 타점을 모두 삭제할까요?')){
+    save('marks',[]); renderMarks();
+  }
+};
+
+/* ===================== 이벤트/자동갱신 ===================== */
+btnRefresh.addEventListener('click', refreshAll);
+btnAuto.addEventListener('click', ()=>{
+  if(timer){
+    clearInterval(timer); timer=null;
+    btnAuto.textContent='▶ 자동갱신 켜기(30초)';
+  }else{
+    timer = setInterval(refreshAll, 30000);
+    btnAuto.textContent='⏸ 자동갱신 끄기';
+    refreshAll();
+  }
+});
+
+/* ===================== 초기화 ===================== */
+(async function(){
+  setStatus(true,'준비');
+  await loadMarkets();
+  renderMarks();
+  refreshAll();
+  // 10초 주기 자동 새로고침(Top 테이블용)
+  setInterval(refreshAll, 10000);
+})();
 </script>
 </body>
 </html>
