--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="ko">
 <head>
+  ...기존 메타/스타일/스크립트...
+  <script src="./config.js"></script>  <!-- 이 줄만 추가 -->
+</head>
+  
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>사토시의지갑 — 코인 타점 분석 (거래 없음)</title>
