--- a/index.html
+++ b/index.html
@@ -158,5 +158,8 @@ btnAuto.addEventListener('click', ()=>{
 });
 (function(){ refreshAll(); setInterval(refreshAll, CFG.INTERVAL_TOP_MS || 1000); })();
 </script>
+<script src="./config.js"></script>
+<script src="./addons.js"></script>
+  
 </body>
 </html>
